fix: hack to align viewport in LiveKit

--- a/assets/main.css
+++ b/assets/main.css
@@ -4,7 +4,8 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  padding-left: 7.5rem;
+  padding-left: 4.6rem;
+  padding-right: 4.6rem;
   font-weight: normal;
 }
 
